# hyped-2025

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md  _typos.toml  build  build.ps1  build.py  optical_flow.rs  rust-toolchain  rust-toolchain.toml
.github/: CODEOWNERS
.github/workflows/: build.yml  ci.yml  lint.yml  require-linear-issue.yml  telemetry.yml
FirmwareUpdater/: Cargo.toml
FirmwareUpdater/src/: RemoteFlash.py  main.rs
boards/: Cargo.toml
boards/can_tester/: Cargo.toml
boards/can_tester/.cargo/: config.toml
boards/can_tester/src/: main.rs
boards/i2c_temp_test/: Cargo.toml
boards/i2c_temp_test/src/: main.rs
boards/navigation/: Cargo.toml
boards/navigation/.cargo/: config.toml
boards/navigation/src/: main.rs
boards/stm32f767zi/: Cargo.toml
boards/stm32f767zi/.cargo/: config.toml
boards/stm32f767zi/src/: board_state.rs  config.rs  emergency.rs  io.rs  lib.rs  log.rs  macros.rs  tasks.rs  telemetry_config.rs
boards/stm32f767zi/src/io/: adc.rs  gpio.rs  i2c.rs  sdmmc.rs
boards/stm32f767zi/src/tasks/: accelerometer.rs  button.rs  can.rs  can_receiver.rs  can_sender.rs  can_to_mqtt.rs  heartbeat.rs  heartbeat_coordinator.rs  heartbeats_responder.rs  i2c_mux_example.rs  keyence.rs  mqtt.rs  mqtt_recv.rs  mqtt_send.rs  network.rs  read_accelerometer.rs  read_accelerometer_from_mux.rs  read_high_pressure.rs  read_imd.rs  read_keyence.rs  read_laser_triangulation.rs  read_low_pressure.rs  read_temperature.rs  read_temperature_mux_board.rs  sensors.rs  state_machine.rs  state_updater.rs  temperature.rs
boards/stm32f767zi/src/tasks/can/: board_heartbeat.rs  heartbeat.rs  heartbeat_controller.rs  heartbeats_responder.rs  receive.rs  send.rs  spawn.rs
boards/stm32f767zi/src/tasks/mqtt/: base_station_heartbeat.rs  heartbeat.rs  receive.rs  send.rs
boards/stm32f767zi/src/tasks/sensors/: read_accelerometer.rs  read_accelerometer_from_mux.rs  read_accelerometers_from_mux.rs  read_keyence.rs  read_laser_triangulation.rs  read_low_pressure.rs  read_lp_bms.rs  read_temperature.rs
boards/stm32f767zi/src/tasks/state_machine/: state_machine.rs  state_updater.rs
boards/stm32f767zi/src/tasks/tests/: button.rs
boards/stm32h743zi/: Cargo.toml
boards/stm32h743zi/.cargo/: config.toml
boards/stm32h743zi/src/: config.rs  lib.rs  log.rs  tasks.rs
boards/stm32l432kc/: Cargo.toml
boards/stm32l432kc/src/: io.rs  (+1 more)
boards/stm32l476rg/: Cargo.toml
boards/stm32l476rg/.cargo/: config.toml
boards/stm32l476rg/src/: io.rs  tasks.rs
boards/stm32l476rg/src/io/: adc.rs  gpio.rs  i2c.rs  spi.rs
boards/stm32l476rg/src/tasks/: keyence.rs  led_driver.rs  pneumatics.rs  read_keyence.rs  read_temp.rs  read_temperature.rs  temperature.rs  time_of_flight.rs  tof.rs
boards/telemetry-board/: Cargo.toml
boards/telemetry-board/src/: RemoteFlash.py  main.rs
boards/test_i2c_temp/: Cargo.toml
config/: Cargo.toml  control.yaml  heartbeats.yaml  levitation.yaml  localisation.yaml  pods.yaml  sensors.yaml  telemetry.yaml
config/config_derive/: Cargo.toml
config/src/: lib.rs
debugger/tui/: Cargo.toml
io/src/: lib.rs  mock_gpio.rs
lib/: Cargo.toml
lib/communications/: Cargo.toml
lib/communications/measurement_ids/: Cargo.toml
lib/communications/measurement_ids/src/: lib.rs
lib/communications/src/: boards.rs  can_id.rs  data.rs  emergency.rs  heartbeat.rs  identifier.rs  lib.rs  measurements.rs  message_identifier.rs  messages.rs  state_transition.rs
lib/control/: Cargo.toml
lib/control/src/: config.rs  hp_relay.rs  lev_controllers.rs  lib.rs  pi_controller.rs  pid_controller.rs  pneumatics.rs
lib/control/src/controllers/: mod.rs  pi_controller.rs  pid_controller.rs
lib/core/: Cargo.toml  build.rs
lib/core/src/: can_sendable.rs  comms.rs  config.rs  format_string.rs  lib.rs  log_types.rs  logging.rs  mqtt.rs  mqtt_topics.rs  states.rs  types.rs
lib/core/src/comms/: boards.rs  can_id.rs  can_sendable.rs  data.rs  identifier.rs  measurements.rs  messages.rs  state_transition.rs
lib/debugger/: Cargo.toml
lib/io/: Cargo.toml
lib/io/hyped_adc/: Cargo.toml
lib/io/hyped_adc/hyped_adc_derive/: Cargo.toml
lib/io/hyped_adc/hyped_adc_derive/src/: lib.rs
lib/io/hyped_adc/src/: adc_mux.rs  lib.rs
lib/io/stm32l476rg/: Cargo.toml
lib/io/stm32l476rg/src/: adc.rs  gpio.rs  i2c.rs  i2c_mux.rs  lib.rs
lib/levitation/: Cargo.toml
lib/localisation/: Cargo.toml
lib/localisation/preprocessing/: Cargo.toml
lib/localisation/preprocessing/src/: preprocess_keyence.rs  preprocess_optical.rs
lib/localisation/src/: config.rs  control.rs  filtering.rs  lib.rs  preprocessing.rs  types.rs
lib/localisation/src/control/: localizer.rs  navigator.rs
lib/localisation/src/filtering/: kalman_filter.rs
lib/localisation/src/preprocessing/: accelerometer.rs  keyence.rs  lib.rs  optical.rs
lib/measurement_ids/: Cargo.toml
lib/motors/: Cargo.toml  can_processor.rs
lib/motors/config/: messages.rs
lib/motors/src/: can_open_message.rs  can_open_processor.rs  can_processor.rs  constant_frequency_calculator.rs  frequency_calculator.rs  lib.rs  time_frequency_calculator.rs  velocity_frequency_calculator.rs
lib/sensor_bounds/: Cargo.toml
lib/sensors/: Cargo.toml  led_driver  led_driver.rs
lib/sensors/src/: accelerometer.rs  adc_mux.rs  config.rs  current_levitation.rs  high_pressure.rs  imd.rs  keyence.rs  laser_triangulation.rs  led_driver.rs  lib.rs  low_pressure.rs  lp_bms.rs  optical_flow.rs  temperature.rs  time_of_flight.rs  tof.rs  types.rs
lib/state_machine/: Cargo.toml
lib/state_machine/src/: lib.rs  state_machine.rs  states.rs  types.rs
sensors/: Cargo.toml
sensors/src/: keyence.rs  types.rs
telemetry/: Dockerfile  biome.json  docker-compose.yml  package.json  pnpm-lock.yaml  telemetry.code-workspace  turbo.json
telemetry/server/: .env  Cargo.toml  influx.yaml  mqtt.yaml
telemetry/server/src/: config.rs  main.rs  mqtt.rs  openmct.rs
telemetry/server/src/mqtt/: ingestion.rs
telemetry/server/src/openmct/: data.rs  dictionary.rs  object_types.rs  routes.rs
telemetry/server/src/openmct/data/: historical.rs  realtime.rs
(+55 files in other folders)
