[workspace]
members = [
  "lib/core",
  "lib/control",
  "lib/io/*",
  "lib/localisation",
  "lib/motors",
  "lib/sensors",
  "lib/state_machine",
  "lib/communications",
  "lib/sensor_bounds",
]
exclude = [
  "boards/stm32l476rg",
  "boards/stm32f767zi",
  "boards/stm32l432kc",
]
resolver = "2"

[workspace.lints.clippy]
uninlined_format_args = "allow"
