[package]
name = "hyped_core"
version = "0.1.0"
edition = "2021"

[dependencies]
defmt = "0.3"
heapless = { version = "0.8", default-features = false, features = ["serde"] }
rust-mqtt = { version = "0.3.0", default-features = false, features = ["defmt"] }
embedded-io-async = { version = "0.6.1" }
rand_core = "0.6.3"
serde = { version = "1.0", default-features = false, features = ["derive"] }

[features]
std = []