[package]
name = "hyped_core"
version = "0.1.0"
edition = "2021"

[dependencies]
heapless = { version = "0.8", default-features = false, features = ["serde"] }
rust-mqtt = { version = "0.3.0", default-features = false, features = ["defmt"] }
embedded-io-async = "0.6.1"
rand_core = "0.6.3"
serde = { version = "1.0", default-features = false, features = ["derive"] }
embassy-net = { version = "0.4.0", default-features = false, features = ["defmt", "tcp", "proto-ipv4", "medium-ip"], git = "https://github.com/embassy-rs/embassy", rev = "1c466b81e6af6b34b1f706318cc0870a459550b7"}
defmt = "0.3"
config_to_rs = "0.2.1"

hyped_can = { path = "../io/hyped_can" }
hyped_measurement_ids = { path = "../measurement_ids" }

[dev-dependencies]
log = { version = "0.4", default-features = false }
defmt = { version = "0.3", features = ["unstable-test"] }
