[package]
name = "hyped_localisation"
version = "0.1.0"
edition = "2021"

[dependencies]
nalgebra = { version = "0.33.0", default-features = false, features = ["libm"]  }
heapless = { version = "0.8", default-features = false, features = ["serde"]}
libm = "0.2.11"
defmt = "0.3"

[dev-dependencies]
defmt = { version = "0.3", features = ["unstable-test"] }
