[package]
name = "hyped_motors"
version = "0.1.0"
edition = "2021"

[dependencies]
embassy-sync = { version = "0.6.0", features = ["defmt"], git = "https://github.com/embassy-rs/embassy", rev = "1c466b81e6af6b34b1f706318cc0870a459550b7"}
hyped_core = { path = "../core" }
hyped_can = { path = "../io/hyped_can" }