[package]
name = "hyped_sensors"
version = "0.1.0"
edition = "2021"

[dependencies]
heapless = "0.8.0"
defmt = "0.3.8"
embassy-time = { version = "0.3.1", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"], git = "https://github.com/embassy-rs/embassy", rev = "1c466b81e6af6b34b1f706318cc0870a459550b7"}

hyped_core = { path = "../core" }
hyped_io = { path = "../io" }

