[package]
name = "hyped_sensors"
version = "0.1.0"
edition = "2021"

[dependencies]
heapless = "0.8.0"
embassy-sync = { version = "0.6.0", features = ["defmt"], git = "https://github.com/embassy-rs/embassy", rev = "1c466b81e6af6b34b1f706318cc0870a459550b7"}
hyped_core = { path = "../core" }
hyped_i2c = { path = "../io/hyped_i2c" }
hyped_gpio = { path = "../io/hyped_gpio" }
hyped_adc = { path = "../io/hyped_adc" }
defmt = "0.3"

[dev-dependencies]
# Fix from: https://github.com/embassy-rs/embassy/pull/2727
embassy-sync = { version = "0.6.0", features = ["defmt", "std"], git = "https://github.com/embassy-rs/embassy", rev = "1c466b81e6af6b34b1f706318cc0870a459550b7"}
