[package]
name = "hyped_state_machine"
version = "0.1.0"
edition = "2021"

[features]
std = []

[dependencies]
heapless = "0.8.0"
hyped_core = { path = "../core" }
rust-mqtt = { version = "0.3.0", default-features = false, features = ["defmt"] }
embassy-net = { version = "0.4.0", default-features = false, features = ["defmt", "tcp", "proto-ipv4", "medium-ip"] }
