[package]
name = "telemetry-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features= ["ws"] }
serde = { version = "1.0.204", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
# InfluxDB
influxdb2 = "0.5.2"
influxdb2-structmap = "0.2"
influxdb2-derive = "0.1.1"
num-traits = "0.2"
chrono = "0.4.38"
axum-macros = "0.4.1"
serde_json = "1.0.120"
futures = "0.3.30"
hashbrown = "0.14.5"
uuid = { version = "1.10.0", features = ["v4"] }
socketioxide = "0.14.0"
axum-util = "0.2.2"
tower-http = { version ="0.5.2", features = ["cors"]}
rumqttc = "0.24.0"
yaml-rust = "0.4.5"

[profile.release]
debug = true
